GNOME Bugzilla – Bug 750395
Fix the GDataAccessRule example
Last modified: 2015-06-04 15:56:02 UTC
I noticed that the sample code in the documentations is wrong when trying to write a test program. We need to pass the a GDataAuthorizationDomain to gdata_service_insert_entry, and we should not unref the GDataLink returned by gdata_entry_look_up_link.
Created attachment 304580 [details] [review] core: Fix the GDataAccessRule example
Review of attachment 304580 [details] [review]: Good spot, thanks.