core: Fix the GDataAccessRule example

We need to pass the a GDataAuthorizationDomain to
gdata_service_insert_entry, and we should not unref the GDataLink
returned by gdata_entry_look_up_link.

https://bugzilla.gnome.org/show_bug.cgi?id=750395